--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <h1 class="jumbotron">Your Address Book!</h1>
+      <h1 class="jumbotron">Address Book</h1>
 
       <div class="row">
         <div class="col-sm-6">
